--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-animatable": "^1.3.3",
+    "react-native-communications": "^2.2.1",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-maps": "1.3.2",
+    "react-native-paper": "^5.7.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
