--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-communications": "^2.2.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-maps": "1.3.2",
